--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "element-plus": "^2.7.8",
+    "normalize.css": "^8.0.1",
     "vue": "^3.4.31"
   },
   "devDependencies": {
+    "@types/node": "^22.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.18.2",
