--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@types/node": "^22.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "postcss-px-to-viewport-8-plugin": "^1.2.5",
+    "sass": "^1.77.8",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.3",
