--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "element-plus": "^2.7.8",
     "normalize.css": "^8.0.1",
     "vue": "^3.4.31"
