--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "vue": "^3.4.31"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.16",
     "@types/node": "^22.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "sass": "^1.77.8",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.18.2",
+    "unplugin-icons": "^0.19.1",
     "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.4",
     "vue-tsc": "^2.0.24"
