--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "axios": "^1.7.3",
     "element-plus": "^2.7.8",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^3.4.31"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.16",
     "@types/node": "^22.1.0",
+    "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.0.5",
     "postcss-px-to-viewport-8-plugin": "^1.2.5",
     "sass": "^1.77.8",
